# iu-proto

./: .gitignore  .gitlab-ci.yml  BUILD.bazel  WORKSPACE  buf.gen.yaml  buf.yaml  go_version.bzl  id_ed25519  shell.nix
meta/reference/v1beta1/: reference.proto
nix/buf/: default.nix
service/control/service-routing/v1beta1/: BUILD.bazel  service_routing.proto
service/data/interface/mailgun-interface/v1beta1/: BUILD.bazel  mailgun_interface_service.proto
service/data/utility/idempotency/v1beta1/: BUILD.bazel  idempotency_service.proto
type/meta/reference/v1beta1/: BUILD.bazel  reference.proto
type/meta/reference/v1beta2/: BUILD.bazel  reference.proto
type/meta/reference/v1beta3/: BUILD.bazel  reference.proto
type/nonce/v1beta1/: BUILD.bazel  nonce.proto
