load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "nonce_proto",
    srcs = ["nonce.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "nonce_go_proto",
    importpath = "go.innovationupstream.dev/genproto/type/nonce/v1beta1",
    proto = ":nonce_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":nonce_go_proto"],
    importpath = "go.innovationupstream.dev/genproto/type/nonce/v1beta1",
    visibility = ["//visibility:public"],
)
