load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "service_routing_proto",
    srcs = ["service_routing.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "service_routing_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "go.innovationupstream.dev/genproto/service/control/service-routing/v1beta1",
    proto = ":service_routing_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":service_routing_go_proto"],
    importpath = "go.innovationupstream.dev/genproto/service/control/service-routing/v1beta1",
    visibility = ["//visibility:public"],
)
