load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "reference_proto",
    srcs = ["reference.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "reference_go_proto",
    importpath = "go.innovationupstream.dev/genproto/type/meta/reference/v1beta1",
    proto = ":reference_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":reference_go_proto"],
    importpath = "go.innovationupstream.dev/genproto/type/meta/reference/v1beta1",
    visibility = ["//visibility:public"],
)
