load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "mailgun_interface_proto",
    srcs = ["mailgun_interface_service.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:empty_proto"],
)

go_proto_library(
    name = "mailgun_interface_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "go.innovationupstream.dev/genproto/service/data/interface/mailgun-interface/v1beta1",
    proto = ":mailgun_interface_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":mailgun_interface_go_proto"],
    importpath = "go.innovationupstream.dev/genproto/service/data/interface/mailgun-interface/v1beta1",
    visibility = ["//visibility:public"],
)
